# onnxruntime-build

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.arm64  README.md  build-linux-arm64.sh  build-static-lib.sh  build-static_lib.sh  build-wasm-static-lib-simd-threaded.sh  build-wasm-static-lib-simd.sh  build-wasm-static-lib-threaded.sh  build-wasm-static-lib.sh  build-wasm-static_lib.sh  build.sh  gnu-toolchain.cmake  protoc.cmake  test.sh  tool.cmake
.github/: dependabot.yml
.github/workflows/: build.yml  update.yml
static-lib/: CMakeLists.txt  bundle_static_library.cmake
static-lib/tests/: CMakeLists.txt
static_lib/: CMakeLists.txt
static_lib/tests/: CMakeLists.txt  test_inference.cc
tests/: CMakeLists.txt  test_inference.cc  test_main.cc
wasm-static-lib/tests/: CMakeLists.txt
wasm-static_lib/tests/: CMakeLists.txt  test_inference.cc
